forecast/src/objects/SpecialistForecast__c.object
<CustomObject>
    <label>Specialist Forecast</label>
    <pluralLabel>Specialist Forecasts</pluralLabel>
    <description>Primary Custom Object for Specialist Forecasting that stores required info for each specialist forecast.</description>
    <sharingModel>Private</sharingModel>


    <nameField>
        <displayFormat>SAF-{00000000}</displayFormat>
        <label>Specialist Forecast Name</label>
        <type>AutoNumber</type>
    </nameField>

    <fields>
        <fullName>Account__c</fullName>
        <label>Account</label>
        <formula>
            Opportunity__r.Account.Name
        </formula>
        <description>Part of the Specialist Forecasting Unmanaged Package from Salesforce Labs</description>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipName>SpecialistForecastToOpportunity</relationshipName>
        <description>Part of the Specialist Forecasting Unmanaged Package from Salesforce Labs</description>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FiscalYear__c</fullName>
        <description>Part of the Specialist Forecasting Unmanaged Package from Salesforce Labs</description>
        <inlineHelpText>The Fiscal Year of the forecast record, which should always be set automatically.</inlineHelpText>
        <label>Fiscal Year</label>
        <picklist>
            <picklistValues>
                <fullName>FY11</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FY12</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FY13</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FY14</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FY15</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FY16</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Month__c</fullName>
        <description>Part of the Specialist Forecasting Unmanaged Package from Salesforce Labs</description>
        <inlineHelpText>The month the forecast belongs to, calculated from the Close Date.</inlineHelpText>
        <label>Month</label>
        <picklist>
            <picklistValues>
                <fullName>January</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>February</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>March</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>April</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>May</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>June</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>July</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>August</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>September</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>October</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>November</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>December</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ForecastCloseDate__c</fullName>
        <label>Close Date</label>
        <description>Part of the Specialist Forecasting Unmanaged Package from Salesforce Labs</description>
        <inlineHelpText>Date the AE expects the opportunity to close.</inlineHelpText>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ForecastType__c</fullName>
        <description>Part of the Specialist Forecasting Unmanaged Package from Salesforce Labs</description>
        <inlineHelpText>A product which may be associated with the forecast.</inlineHelpText>
        <label>Forecast Product Type</label>
        <picklist>
            <!-- Customize these values for your organization's use -->
            <picklistValues>
                <fullName>Product 1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Product 2</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ForecastNotes__c</fullName>
        <description>Part of the Specialist Forecasting Unmanaged Package from Salesforce Labs</description>
        <label>Forecast Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>MgrForecastNotes__c</fullName>
        <description>Part of the Specialist Forecasting Unmanaged Package from Salesforce Labs</description>
        <label>Manager Forecast Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ForecastStage__c</fullName>
        <label>AE Opportunity Stage</label>
        <description>Part of the Specialist Forecasting Unmanaged Package from Salesforce Labs</description>
        <inlineHelpText>Opportunity Stage chosen by the AE for the forecast.</inlineHelpText>
        <type>Picklist</type>
        <picklist>
            <picklistValues>
                <fullName>01 - Identifying an Opportunity</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>02 - Determining Problem, Impact, Ideal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>03 - Validating Benefits &amp; Value</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>04 - Confirming Value With Power</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>05 - Negotiating &amp; Mutual Plan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>06 - Finalizing Closure</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>07 - Pending</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>08 - Closed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Closed - Out Clause</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dead - Duplicate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dead - Lost</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dead - No Opportunity</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dead - No Decision</fullName>
            </picklistValues>
        </picklist>
    </fields>
    <fields>
        <fullName>ForecastCategory__c</fullName>
        <label>Forecast Category</label>
        <picklist>
            <controllingField>ForecastStage__c</controllingField>
            <picklistValues>
                <fullName>Omitted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pipeline</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Best Case</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Commit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Closed Won</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Closed Lost</fullName>
            </picklistValues>
        </picklist>
        <description>Part of the Specialist Forecasting Unmanaged Package from Salesforce Labs</description>
        <inlineHelpText>Based on the Opportunity Stage, select a category the forecast apples to.</inlineHelpText>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ForecastAmount__c</fullName>
        <required>true</required>
        <label>Opportunity Amount</label>
        <inlineHelpText>AE's forecast amount for his/her part of the opportunity.</inlineHelpText>
        <precision>16</precision>
        <scale>2</scale>
        <type>Currency</type>
        <description>Part of the Specialist Forecasting Unmanaged Package from Salesforce Labs</description>
    </fields>
    <fields>
        <fullName>ExcludeFromCalculation__c</fullName>
        <label>Exclude From Calculation?</label>
        <defaultValue>false</defaultValue>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ExtIdentifier__c</fullName>
        <externalId>true</externalId>
        <label>External Identifier</label>
        <length>80</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
       <fullName>ProductLead__c</fullName>
       <label>Product Lead</label>
       <length>80</length>
       <type>Text</type>
       <description>Part of the Specialist Forecasting Unmanaged Package from Salesforce Labs</description>
    </fields>
    <fields>
        <!-- Future: Consider removing this field, no longer needed? -->
        <fullName>OwnerCopy__c</fullName>
        <label>Owner Copy</label>
        <deleteConstraint>SetNull</deleteConstraint>
        <referenceTo>User</referenceTo>
        <relationshipName>SpecialistForecastToUser</relationshipName>
        <description>Part of the Specialist Forecasting Unmanaged Package from Salesforce Labs</description>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OwnerManager__c</fullName>
        <label>Owner Manager</label>
        <formula>
            OwnerCopy__r.Manager.FirstName &amp; ' ' &amp; OwnerCopy__r.Manager.LastName
        </formula>
        <type>Text</type>
        <description>Part of the Specialist Forecasting Unmanaged Package from Salesforce Labs</description>
    </fields>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>Opportunity__c</columns>
        <columns>ForecastType__c</columns>
        <columns>ForecastCloseDate__c</columns>
        <columns>FiscalYear__c</columns>
        <columns>Month__c</columns>
        <columns>ForecastCategory__c</columns>
        <columns>ForecastStage__c</columns>
        <columns>ForecastAmount__c</columns>
        <columns>ForecastNotes__c</columns>
        <columns>ExcludeFromCalculation__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <recordTypes>
        <fullName>SpecialistForecastData</fullName>
        <description>Record Type assigned to platform or service cloud</description>
        <active>true</active>
        <label>Specialist Forecast Data</label>
    </recordTypes>
    <recordTypes>
        <fullName>SpecialistForecastOptyLineData</fullName>
        <description>Record Type assigned to platform or service cloud for Opportunity Line Item</description>
        <active>true</active>
        <label>Specialist Forecast Opportunity Line Data</label>
    </recordTypes>
</CustomObject>